🍏🚈 Checkpoint ./index.html:41223576/115

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>Scifer</title>
 
     <!-- Meta tags for SEO and social sharing -->
-    <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
+    <link rel="canonical" href="http://rhelm.fun" />
     <meta
       name="description"
-      content="A simple website, built with Glitch. Remix it to get your own."
+      content=""
     />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Hello World!" />
