🌠🏌 Checkpoint ./index.html:41223576/206

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <link rel="canonical" href="http://rhelm.fun" />
     <meta
       name="description"
-      content=""
+      content="The Nexus of Afrofuturism"
     />
     <meta name="robots" content="index,follow" />
-    <meta property="og:title" content="Hello World!" />
+    <meta property="og:title" content="Enter the Scifer" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://glitch-hello-website.glitch.me/" />
+    <meta property="og:url" content="https://rhelm.fun" />
     <meta
       property="og:description"
-      content="A simple website, built with Glitch. Remix it to get your own."
+      content="The Nexus of Afrofuturism"
     />
     <meta
       property="og:image"
