--- a/index.html
+++ b/index.html
@@ -44,17 +44,22 @@
         <!-- This is the start of content for our page -->
         <h1 class="title">Scifer</h1>
 
-        <img
+      <a>  <img
           src="starry.jpg"
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
-        />
+                    /></a>
         <!-- Instructions on using this project -->
         <div class="instructions">
           <h2>
             Using this project
           </h2>
+          <section></section>
+                    <section></section>
+          <section></section>
+          <section></section>
+
           <p>
             This is the Glitch <strong>Hello Website</strong> project. You can
             use it to build your own site. Check out README.md in the editor for
