🎙🕴 Checkpoint ./index.html:41223576/271

--- a/index.html
+++ b/index.html
@@ -55,10 +55,18 @@
           <h2>
             Using this project
           </h2>
-          <section></section>
-                    <section></section>
-          <section></section>
-          <section></section>
+          <section><h2>
+            Twitch
+            </h2></section>
+                    <section><h2>
+                      Discord
+                      </h2></section>
+          <section><h2>
+                      Youtube
+                      </h2></section>
+          <section><h2>
+                      Twitter
+                      </h2></section>
 
           <p>
             This is the Glitch <strong>Hello Website</strong> project. You can
