--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
+  <header><nav><p>
+    this
+    </p></nav></header>
   <body>
     
     <div class="wrapper">
@@ -65,7 +68,9 @@
           <section><h2>
                       Twitter
                       </h2></section>
-
+<section><h2>
+                      
+                      </h2></section>
           <p>
             This is the Glitch <strong>Hello Website</strong> project. You can
             use it to build your own site. Check out README.md in the editor for
