🗃👐 Checkpoint ./index.html:41223576/1

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Twitch
             </h2></section>
                     <section><h2>
-                      Discord
+\                      Discord
                       </h2></section>
           <section><h2>
                       Youtube
