👝🏡 Checkpoint ./style.css:41223576/180 ./index.html:41223576/131

--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
     <meta name="twitter:card" content="summary" />
 
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
-  <header><nav><p>
-    this
+  <header><nav><ul>
+    <li><a> href="Gaming.html"</a></li>
+        <li></li>
+
+    </ul>
+    
     </p></nav></header>
   <body>
     <div class="form-popup" id="myForm">
