🌱🗺 Checkpoint ./index.html:41223576/93

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
-  <header><nav><ul>
-    <li><a> href="Gaming.html"</a></li>
-        <li></li>
+  <header><nav id="nav"><ul>
+    <li><a href="Gaming.html"></a>Gaming</li>
+        <li><a href="Library.html"></a>Library</li>
 
     </ul>
     
-    </p></nav></header>
+    </nav></header>
   <body>
     <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
