--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
     
+    body{ background-image:url('illustration.svg'); background-repeat:repeat; }
+
+    
   </head>
   <header>
     <nav id="nav">
