--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
    
 
-    <title>Scifer</title>
+    <title id="scifer">Scifer</title>
 
     <!-- Meta tags for SEO and social sharing -->
     <link rel="canonical" href="http://rhelm.fun" />
@@ -37,8 +37,6 @@
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
     
-    body{ background-image:url('illustration.svg'); background-repeat:repeat; }
-
     
   </head>
   <header>
