🌋🍛 Checkpoint ./style.css:41223576/73 ./Gaming.html:41223576/1468 ./Library.html:41223576/850 ./index.html:41223576/22

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
    
 
-    <title id="scifer">Scifer</title>
+    <title>Scifer</title>
 
     <!-- Meta tags for SEO and social sharing -->
     <link rel="canonical" href="http://rhelm.fun" />
@@ -58,7 +58,7 @@
         <h1 class="title">Scifer</h1>
 
       <a>  <img
-          src="starry.jpg"
+          src=""
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
