⚽️🍂 Checkpoint ./index.html:41223576/56

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
  
   <body>
     
-    <video autoplay muted loop id="myVideo">
-  <source class="src="https://cdn.glitch.global/7dcde100-6546-4d52-b61d-9346e3dff009/Night%20Sky%20full%20of%20Stars.mp4?v=1648742543900" type="video/mp4">
+    <video class="vbg" autoplay muted loop id="myVideo">
+  <source  src="https://cdn.glitch.global/7dcde100-6546-4d52-b61d-9346e3dff009/Night%20Sky%20full%20of%20Stars.mp4?v=1648742543900" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
     
