🏘🎨 Checkpoint ./index.html:41223576/21 ./Library.html:41223576/285 ./Gaming.html:41223576/295

--- a/Gaming.html
+++ b/Gaming.html
@@ -36,6 +36,20 @@
 
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+    
+     <header>
+    <nav id="nav">
+    <ul>
+  
+       <li><a href="index.html">Home</a></li>
+          <li><a href="Gaming.html">Games</a></li>
+          <li><a href="Library.html">Library</a></li>
+                <li><a href="test.html">Library</a></li>
+
+
+    </ul>  
+    </nav>
+  </header>
      
   </head>
   
