--- a/index.html
+++ b/index.html
@@ -40,17 +40,12 @@
   </head>
   
   <header>
-    <nav id="nav">
-    <ul>
-  
-       <li><a href="index.html">Home</a></li>
-          <li><a href="Gaming.html">Games</a></li>
-          <li><a href="Library.html">Library</a></li>
-                <li><a href="test.html">Library</a></li>
-
-
-    </ul>  
-    </nav>
+   <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
   </header>
  
   <body>
