⏳⛵️ Checkpoint ./Gaming.html:41223576/371 ./index.html:41223576/497

--- a/Gaming.html
+++ b/Gaming.html
@@ -39,16 +39,13 @@
     
   
   <header>
-    <nav id="nav">
-    <ul>
-  
-       <li><a href="index.html">Home</a></li>
-          <li><a href="Gaming.html">Games</a></li>
-          <li><a href="Library.html">Library</a></li>
-
-    </ul>
-    
-    </nav></header>
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+    </header>
   <body>
   </body>
 </html>
