--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
   </head>
   
   <header>
-   <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+    
+     <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="Gaming.html">News</a>
+  <a href="Library">Contact</a>
   <a href="#about">About</a>
 </div>
+    
+
   </header>
  
   <body>
