😚🏤 Checkpoint ./index.html:41223576/58 ./Gaming.html:41223576/309 ./Library.html:41223576/322 ./style.css:41223576/626

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
     
      <div class="topnav">
   <a class="active" href="index.html">Home</a>
-  <a href="Gaming.html">News</a>
-  <a href="Library">Contact</a>
-  <a href="#about">About</a>
+  <a href="Gaming.html">Gaming</a>
+  <a href="Library.html">Library</a>
 </div>
     
 
