--- a/Gaming.html
+++ b/Gaming.html
@@ -40,11 +40,11 @@
   
   <header>
   <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="index.html">Home</a>
+  <a href="Gaming.html">Gaming</a>
+  <a href="Library.html">Library</a>
 </div>
+    
     </header>
   <body>
   </body>
