--- a/Library.html
+++ b/Library.html
@@ -16,12 +16,12 @@
   
   
   <header>
-    <nav id="nav">
-  <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+ <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="Gaming.html">Gaming</a>
+  <a href="Library.html">Library</a>
+</div>
+    
 </div>
   
   </header>
