👑👜 Checkpoint ./index.html:41223576/129

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <header>
     
      <div class="topnav">
+       <img src="hold.jpg" alt="logo here">
+
   <a class="active" href="index.html">Home</a>
   <a href="Gaming.html">Gaming</a>
   <a href="Library.html">Library</a>
