👆🏔 Checkpoint ./index.html:41223576/89

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header>
     
      <div class="topnav">
-       <img src="hold.jpg" alt="logo here">
+       <img src="hold.jpg" alt="Scifer Logo">
 
   <a class="active" href="index.html">Home</a>
   <a href="Gaming.html">Gaming</a>
@@ -60,12 +60,7 @@
         <!-- This is the start of content for our page -->
         <h1 class="title">Scifer</h1>
 
-      <a>  <img
-         src=""
-          class="illustration"
-          alt="Editor illustration"
-          title="Click the image!"
-                    /></a>
+      <a>  <img src="space.gif" class="illustration" alt="Editor illustration" title="Click the image!"/></a>
         <p id="subtitle">
           The Center of the Blerdverse
         </p>
