💺🌻 Checkpoint ./index.html:41223576/2268 ./style.css:41223576/12

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- This is the start of content for our page -->
         <h1 class="title">Scifer</h1>
 
-      <a>  <img src="space.gif" class="illustration" alt="Editor illustration" title="Click the image!"/></a>
+      <a> <div class="tenor-gif-embed" data-postid="22975792" data-share-method="host" data-aspect-ratio="1.77778" data-width="100%"><a href="https://tenor.com/view/space-gif-22975792">Space GIF</a>from <a href="https://tenor.com/search/space-gifs">Space GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script></a>
         <p id="subtitle">
           The Center of the Blerdverse
         </p>
