👣😀 Checkpoint ./index.html:41223576/275 ./style.css:41223576/247

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <a><img scr="staceyabrams.jpg" alt="staceyabrams" /></a>
     <h2>The Center of the Blerdverse</h2>
     <br />
-   < <p>Black Girls in Space</p>
+   <section><h3>Black Girls in Space</h3><a><img src="tawny.jpg" alt="tawnynewsome"></a><p>
+     from Uhuru to Uhura
+     </p></section> 
 
     <br />
     <br />
